# postech-ml-techchallenge-fase-1-streamlit

./: app.py  pyproject.toml
.streamlit/: config.toml
pages/: collection.py  login.py  menu.py  preferences.py  register.py  stats.py
scripts/: __init__.py  auth_utils.py  books_utils.py  categories_utils.py  genres_utils.py  ml_utils.py  stats_utils.py
